整理目录文件名结构

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 console.log('+++++ 数据导出方法 +++++');
                 console.log('1. 在控制台输入并执行 JSON.stringify(export_data)');
                 console.log('2. 复制输出的结果');
-                console.log('3. 打开 [vscode] 新建文件 emoji-converted-array.json 并粘贴');
+                console.log('3. 打开 [vscode] 新建文件 emoji-array.json 并粘贴');
                 console.log('4. 去掉开头和结尾的单引号');
                 console.log('');
             }else{
@@ -212,7 +212,7 @@
                 console.log('+++++ 数据导出方法 +++++');
                 console.log('1. 在控制台输入并执行 JSON.stringify(export_data_tree)');
                 console.log('2. 复制输出的结果');
-                console.log('3. 打开 [vscode] 新建文件 emoji-converted-tree.json 并粘贴');
+                console.log('3. 打开 [vscode] 新建文件 emoji-tree.json 并粘贴');
                 console.log('4. 去掉开头和结尾的单引号');
                 console.log('');
             }else{
